# minim

./: Cargo.toml  README.md
src/: data.rs  driver.rs  entities.rs  flow.rs  ident.rs  lib.rs  packet.rs  port.rs  queue.rs  simulation.rs  time.rs  units.rs
src/entities/: bottleneck.rs  flow.rs  source.rs  workload.rs
src/simulation/: event.rs  schedule.rs
tests/: ideal_fct.rs
