[package]
name = "minim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delegate = "0.6.2"
derivative = "2.2.0"
derive-new = "0.5.9"
derive_more = "0.99.17"
rustc-hash = "1.1.0"
serde = { version = "1.0.136", features = ["derive"] }
smallvec = "1.8.0"
typed-builder = "0.10.0"
