[package]
name = "minim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delegate = "0.12.0"
derivative = "2.2.0"
derive-new = "0.6.0"
derive_more = "0.99.17"
rustc-hash = "1.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
smallvec = "1.13.2"
thiserror = "1.0.58"
typed-builder = "0.18.1"

[features]
